# athena

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_signal.yml  tests.yml
core/api/: __init__.py  auth.py  cli.py  models.py  sdk.py  server.py  services.py
core/backtest/: engine.py  metrics.py  validation.py
core/config/: __init__.py  loader.py  reference.py  registry.py  snapshot.py  versioning.py
core/data/: __init__.py  contract.py  factory.py  registry.py
core/decision_builder/: __init__.py  assembler.py  builder.py  candidate.py  context.py  evaluator.py  ledger.py  policies.py  portfolio.py  rules.py
core/derivatives/: __init__.py  greeks.py
core/domain/: __init__.py
core/evidence/: __init__.py  accumulator.py  agreement.py  context.py  decay.py  engine.py  evaluator.py  metrics.py
core/evidence_builder/: __init__.py  builder.py  candidate.py  policies.py  rules.py
core/explanation/: __init__.py  context.py  engine.py  graph.py  models.py
core/facts/: __init__.py  builder.py  rules.py  taxonomy.py
core/hypothesis_builder/: __init__.py  assembler.py  builder.py  candidate.py  context.py  evaluator.py  ledger.py  policies.py  (+1 more)
docs/: CHANGELOG.md  PROJECT_BIBLE.md  ROADMAP.md
scripts/: daily_signal.py  record_historical_fixtures.py  run_real_validation_campaign.py  sprint24_proof.py  sprint29_proof.py  sprint31_feasibility_check.py
signals/: paper_trades.jsonl
templates/: ADR_TEMPLATE.md  DEVELOPMENT_LOG_TEMPLATE.md  EXPERIMENT_TEMPLATE.md  MEETING_NOTES_TEMPLATE.md  SPECIFICATION_TEMPLATE.md
tests/: __init__.py
(+290 files in other folders)
