[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-platform"
version = "1.0.0"
description = "Athena Cognitive Reasoning Platform"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
athena = "core.api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
exclude = ["tests*"]
